fix timestamp in view

--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -1,4 +1,4 @@
-<ul ng-repeat="s in status">
+<ul ng-repeat="s in status | orderBy:'timestamp':'reverse'">
   <!-- <li><pre>{{s | json}}</pre></li> -->
-  <li>{{s.id}} | {{s.timestamp | date:'yyyy-MM-dd HH:mm:ss Z'}} - {{s.location_name}} - {{s.index}} - {{s.status}}</li>
+  <li>{{s.id}} | {{s.timestamp | date:'h:m:s a'}} - {{s.location_name}} - {{s.index}} - {{s.status}}</li>
 </ul>
