fix ul li on status page

--- a/web/app/views/status.html
+++ b/web/app/views/status.html
@@ -1,3 +1,5 @@
-<ul ng-repeat="s in status | orderBy:'timestamp':'reverse'">
-  <li>{{s.id}} | {{s.timestamp | date:'h:mm:s a'}} - {{s.location_name}} - {{s.index}} - {{s.status}}</li>
+<ul>
+  <li ng-repeat="s in status | orderBy:'timestamp':'reverse'">
+  	{{s.id}} | {{s.timestamp | date:'h:mm:s a'}} - {{s.location_name}} - {{s.index}} - {{s.status}}
+  </li>
 </ul>
