--- a/web/app/views/status.html
+++ b/web/app/views/status.html
@@ -1,5 +1,5 @@
 <ul>
   <li ng-repeat="s in status | orderBy:'timestamp':'reverse'">
-  	{{s.id}} | {{s.timestamp | date:'h:mm:s a'}} - {{s.location_name}} - {{s.index}} - {{s.status}}
+  	{{s.id}} | {{s.timestamp | date:'h:mm:s a'}} - {{s.location_name}} - {{s.index}} - {{s.previous}} => {{s.status}}
   </li>
 </ul>
