--- a/web/app/views/machines.html
+++ b/web/app/views/machines.html
@@ -1,11 +1,11 @@
 <ol>
-  <li ng-repeat="machine in machines | orderBy:'id'">
-  	{{machine.id}} - {{machine.location_name}} - {{machine.index}}
-  	<ul>
-  		<li ng-repeat="item in machine.statuses | toArray">
-  			{{item[0] | date:'h:mm:ss a'}} - {{item[1]}}
-  		</li>
-  	</ul>
+  <li ng-repeat="machine in machines | filter:{'status':'!Out of service'} | orderBy:'timestamp':'reverse'">
+  	{{machine.id}} - {{machine.location_name}} - {{machine.index}} - {{machine.timestamp | date:'h:mm:ss a'}} - {{machine.status}} - {{ machine.runs ? (machine.runs | toArray).length : 0 }} runs
+    <ul ng-if="machine.runs">
+  	  <li ng-repeat="item in machine.runs | toArray track by $index">
+  	    Run {{$index+1}} - {{item[0] | date:'h:mm:ss a'}} - {{item[1] | date:'h:mm:ss a'}}
+  	  </li>
+    </ul>
   </li>
 </ol>
 
